<resources>
    <string name="app_name">Peasant Smile</string>
    <string name="todo">TODO</string>
    <string name="khaddo50_55">আলু\nচীনাবাদাম\nশসা\nরসুন\n</string>
    <string name="khaddo56_60">গাজর\nফুলকপি\nভুট্টা\nশসা\nগোল মরিচআলু\nমিষ্টি আলু\nমিষ্টিকুমড়া\nধান\nসয়াবিন\nটমেটো\nশালগম\nবেগুন\n</string>
    <string name="khaddo6_7">ধান\nমটরশুটি\nশতমূলী\nশিম\nচিকন শিম\nবাঁধাকপি\nফুলকপি\nভুট্টা\nশসা\nরসুন\nলেটুস\nপেঁয়াজ\nচীনাবাদাম\nমিষ্টিকুমড়া\nশালগম\nটমেটো\nগাজর\nওলকপি\nব্রোকলি\nবেগুন\nঢেঁড়শ\nধুন্দুল\n</string>
    <string name="khaddo70_75">বাঁধাকপি\nফুলকপি\nওলকপি\nমাশরুম\nবীট-পালং\nব্রোকলি\nঢেঁড়শ\nধুন্দুল\n</string>


    <string name="folmul50_55">আঙ্গুর\nস্ট্রবেরি\nব্লাকবেরি\nব্লুবেরি\n</string>
    <string name="folmul56_60">তরমুজ\nঅ্যাপেল\nরাস্পবেরি\nস্ট্রবেরি\n</string>
    <string name="folmul6_7">তরমুজ\nচেরি\nকফি\nআপেল\nড্রাগন ফল\nপেয়ারা\nআম\nনাশপাতি\nআনারস\nলেবু\nকমলা লেবু\nআঙ্গুর\n</string>
    <string name="folmul70_75">কমলা লেবু\nনাশপাতি\nবরই\nস্ট্রবেরি\n</string>

    <string name="ful50_55">ওয়াল-ফ্লোর\nকসমস\nহলি\nআইরিশ\nগাঁদা ফুল\nসূর্যমুখী\nগন্ধরাজ\nজুঁই\n</string>
    <string name="ful56_60">গাঁদা ফুল\nকসমস\nআইরিশ\nপানসি ফুল\nগোলাপ\nসর্পগন্ধা\nসূর্যমুখী\nজিনিয়া\nগন্ধরাজ\nজুঁই\nঅ্যাস্টার\n</string>
    <string name="ful6_7">জিনিয়া\nটিউলিপ\nসূর্যমুখী\nগোলাপ\nহাইব্রিড টি রোজ\nমর্নিং গ্লোরি\nগাঁদা ফুল\nহিবিস্কাস\nড্যাফোডিল\nপেতুনিয়া\nবালসাম ফুল\nচন্দ্রমল্লিকা\nকসমস\nডালিয়া\nডায়ান্থাস\nল্যাভেন্ডার\nজুঁই\nঅ্যাস্টার\nকার্নেশন ফুল\nনীলাম্বরী\nডায়ান্থাস\n</string>
    <string name="ful70_75">জিজুঁই\nঅ্যাস্টার\nকার্নেশন ফুল\nডালিয়া\nনীলাম্বরী\nডায়ান্থাস\nজিনিয়া\nওয়াল-ফ্লোর\nপপি\nল্যাভেন্ডার\n</string>

</resources>
